@@ -32,6 +32,8 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.google.common.collect.Lists;
+import io.airbyte.api.model.AirbyteCatalog;
+import io.airbyte.api.model.AirbyteStreamAndConfiguration;
 import io.airbyte.api.model.AttemptRead;
 import io.airbyte.api.model.AttemptStatus;
 import io.airbyte.api.model.ConnectionIdRequestBody;
@@ -40,7 +42,6 @@ import io.airbyte.api.model.ConnectionReadList;
 import io.airbyte.api.model.ConnectionSchedule;
 import io.airbyte.api.model.ConnectionStatus;
 import io.airbyte.api.model.ConnectionUpdate;
-import io.airbyte.api.model.DataType;
 import io.airbyte.api.model.DestinationIdRequestBody;
 import io.airbyte.api.model.DestinationRead;
 import io.airbyte.api.model.JobConfigType;
@@ -53,9 +54,6 @@ import io.airbyte.api.model.JobWithAttemptsRead;
 import io.airbyte.api.model.SourceDiscoverSchemaRead;
 import io.airbyte.api.model.SourceIdRequestBody;
 import io.airbyte.api.model.SourceRead;
-import io.airbyte.api.model.SourceSchema;
-import io.airbyte.api.model.SourceSchemaField;
-import io.airbyte.api.model.SourceSchemaStream;
 import io.airbyte.api.model.SyncMode;
 import io.airbyte.api.model.WbConnectionRead;
 import io.airbyte.api.model.WbConnectionReadList;
@@ -68,6 +66,9 @@ import io.airbyte.config.StandardDestinationDefinition;
 import io.airbyte.config.StandardSourceDefinition;
 import io.airbyte.config.StandardSync;
 import io.airbyte.config.persistence.ConfigNotFoundException;
+import io.airbyte.protocol.models.CatalogHelpers;
+import io.airbyte.protocol.models.Field;
+import io.airbyte.protocol.models.Field.JsonSchemaPrimitive;
 import io.airbyte.server.helpers.ConnectionHelpers;
 import io.airbyte.server.helpers.DestinationDefinitionHelpers;
 import io.airbyte.server.helpers.DestinationHelpers;
@@ -156,7 +157,7 @@ class WebBackendConnectionsHandlerTest {
         .sourceId(connectionRead.getSourceId())
         .destinationId(connectionRead.getDestinationId())
         .name(connectionRead.getName())
-        .syncSchema(connectionRead.getSyncSchema())
+        .syncCatalog(connectionRead.getSyncCatalog())
         .status(connectionRead.getStatus())
         .schedule(connectionRead.getSchedule())
         .source(sourceRead)
@@ -164,30 +165,19 @@ class WebBackendConnectionsHandlerTest {
         .lastSync(now.getEpochSecond())
         .isSyncing(false);
 
-    final SourceSchemaField field = new SourceSchemaField()
-        .dataType(DataType.NUMBER)
-        .name("id")
-        .cleanedName("id")
-        .selected(true);
-
-    final SourceSchemaStream stream = new SourceSchemaStream()
-        .cleanedName("users")
-        .name("users")
-        .fields(Lists.newArrayList(field));
-
-    final SourceSchema modifiedSchema = new SourceSchema().streams(Lists.newArrayList(stream));
+    final AirbyteCatalog modifiedCatalog = ConnectionHelpers.generateBasicApiCatalog();
 
     when(schedulerHandler.discoverSchemaForSourceFromSourceId(sourceIdRequestBody)).thenReturn(
         new SourceDiscoverSchemaRead()
             .jobInfo(mock(JobInfoRead.class))
-            .schema(modifiedSchema));
+            .catalog(modifiedCatalog));
 
     expectedWithNewSchema = new WbConnectionRead()
         .connectionId(expected.getConnectionId())
         .sourceId(expected.getSourceId())
         .destinationId(expected.getDestinationId())
         .name(expected.getName())
-        .syncSchema(modifiedSchema)
+        .syncCatalog(modifiedCatalog)
         .status(expected.getStatus())
         .schedule(expected.getSchedule())
         .source(expected.getSource())
@@ -248,9 +238,8 @@ class WebBackendConnectionsHandlerTest {
     final SourceConnection source = SourceHelpers.generateSource(UUID.randomUUID());
     final StandardSync standardSync = ConnectionHelpers.generateSyncWithSourceId(source.getSourceId());
 
-    final SourceSchema newApiSchema = ConnectionHelpers.generateBasicApiSchema();
-    newApiSchema.getStreams().get(0).setName("azkaban_users");
-    newApiSchema.getStreams().get(0).cleanedName("azkaban_users");
+    final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
+    catalog.getStreams().get(0).getStream().setName("azkaban_users");
 
     final ConnectionSchedule schedule = new ConnectionSchedule().units(1L).timeUnit(ConnectionSchedule.TimeUnitEnum.MINUTES);
 
@@ -258,14 +247,14 @@ class WebBackendConnectionsHandlerTest {
         .connectionId(standardSync.getConnectionId())
         .status(ConnectionStatus.INACTIVE)
         .schedule(schedule)
-        .syncSchema(newApiSchema)
+        .syncCatalog(catalog)
         .withRefreshedCatalog(false);
 
     final ConnectionUpdate expected = new ConnectionUpdate()
         .connectionId(standardSync.getConnectionId())
         .status(ConnectionStatus.INACTIVE)
         .schedule(schedule)
-        .syncSchema(newApiSchema);
+        .syncCatalog(catalog);
 
     final ConnectionUpdate actual = WebBackendConnectionsHandler.toConnectionUpdate(input);
 
@@ -274,7 +263,7 @@ class WebBackendConnectionsHandlerTest {
 
   @Test
   public void testForCompleteness() {
-    final Set<String> handledMethods = Set.of("schedule", "connectionId", "syncSchema", "status");
+    final Set<String> handledMethods = Set.of("schedule", "connectionId", "syncCatalog", "status");
 
     final Set<String> methods = Arrays.stream(ConnectionUpdate.class.getMethods())
         .filter(method -> method.getReturnType() == ConnectionUpdate.class)
@@ -293,7 +282,7 @@ class WebBackendConnectionsHandlerTest {
         .connectionId(expected.getConnectionId())
         .schedule(expected.getSchedule())
         .status(expected.getStatus())
-        .syncSchema(expected.getSyncSchema());
+        .syncCatalog(expected.getSyncCatalog());
 
     when(connectionsHandler.updateConnection(any())).thenReturn(
         new ConnectionRead()
@@ -301,13 +290,13 @@ class WebBackendConnectionsHandlerTest {
             .sourceId(expected.getSourceId())
             .destinationId(expected.getDestinationId())
             .name(expected.getName())
-            .syncSchema(expected.getSyncSchema())
+            .syncCatalog(expected.getSyncCatalog())
             .status(expected.getStatus())
             .schedule(expected.getSchedule()));
 
     ConnectionRead connectionRead = wbHandler.webBackendUpdateConnection(updateBody);
 
-    assertEquals(expected.getSyncSchema(), connectionRead.getSyncSchema());
+    assertEquals(expected.getSyncCatalog(), connectionRead.getSyncCatalog());
 
     ConnectionIdRequestBody connectionId = new ConnectionIdRequestBody().connectionId(connectionRead.getConnectionId());
     verify(schedulerHandler, times(0)).resetConnection(connectionId);
@@ -320,7 +309,7 @@ class WebBackendConnectionsHandlerTest {
         .connectionId(expected.getConnectionId())
         .schedule(expected.getSchedule())
         .status(expected.getStatus())
-        .syncSchema(expectedWithNewSchema.getSyncSchema())
+        .syncCatalog(expectedWithNewSchema.getSyncCatalog())
         .withRefreshedCatalog(true);
 
     when(connectionsHandler.updateConnection(any())).thenReturn(
@@ -329,13 +318,13 @@ class WebBackendConnectionsHandlerTest {
             .sourceId(expected.getSourceId())
             .destinationId(expected.getDestinationId())
             .name(expected.getName())
-            .syncSchema(expectedWithNewSchema.getSyncSchema())
+            .syncCatalog(expectedWithNewSchema.getSyncCatalog())
             .status(expected.getStatus())
             .schedule(expected.getSchedule()));
 
     ConnectionRead connectionRead = wbHandler.webBackendUpdateConnection(updateBody);
 
-    assertEquals(expectedWithNewSchema.getSyncSchema(), connectionRead.getSyncSchema());
+    assertEquals(expectedWithNewSchema.getSyncCatalog(), connectionRead.getSyncCatalog());
 
     ConnectionIdRequestBody connectionId = new ConnectionIdRequestBody().connectionId(connectionRead.getConnectionId());
     verify(schedulerHandler, times(1)).resetConnection(connectionId);
@@ -343,106 +332,137 @@ class WebBackendConnectionsHandlerTest {
   }
 
   @Test
-  public void testUpdateSchemaWithDiscovery() {
-    final SourceSchema original = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.INCREMENTAL)
-                .cursorField(List.of("field2"))
-                .defaultCursorField(List.of("field1"))
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field1")
-                        .cleanedName("field1")
-                        .dataType(DataType.NUMBER)
-                        .selected(true),
-                    new SourceSchemaField()
-                        .name("field2")
-                        .cleanedName("field2")
-                        .dataType(DataType.NUMBER)
-                        .selected(true),
-                    new SourceSchemaField()
-                        .name("field5")
-                        .cleanedName("field5")
-                        .dataType(DataType.STRING)
-                        .selected(true)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.INCREMENTAL, SyncMode.FULL_REFRESH))));
-    final SourceSchema discovered = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .defaultCursorField(List.of("field3"))
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field2")
-                        .cleanedName("field2")
-                        .dataType(DataType.STRING)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
-    final SourceSchema expected = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .cursorField(List.of("field2"))
-                .defaultCursorField(List.of("field3"))
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field2")
-                        .cleanedName("field2")
-                        .dataType(DataType.STRING)
-                        .selected(true)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
+  public void testUpdateSchemaWithDiscoveryFromEmpty() {
+    final AirbyteCatalog original = new AirbyteCatalog().streams(List.of());
+    final AirbyteCatalog discovered = ConnectionHelpers.generateBasicApiCatalog();
+    discovered.getStreams().get(0).getStream()
+        .name("stream1")
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field1", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    discovered.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .aliasName("stream1");
 
-    final SourceSchema actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
+    final AirbyteCatalog expected = ConnectionHelpers.generateBasicApiCatalog();
+    expected.getStreams().get(0).getStream()
+        .name("stream1")
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field1", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    expected.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .aliasName("stream1");
+
+    final AirbyteCatalog actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
 
     assertEquals(expected, actual);
   }
 
   @Test
-  public void testUpdateSchemaWithDiscoveryNewTable() {
-    final SourceSchema original = new SourceSchema().streams(List.of());
-    final SourceSchema discovered = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field1")
-                        .cleanedName("field1")
-                        .dataType(DataType.STRING)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
-    final SourceSchema expected = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field1")
-                        .cleanedName("field1")
-                        .dataType(DataType.STRING)
-                        .selected(null)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
+  public void testUpdateSchemaWithDiscoveryResetStream() {
+    final AirbyteCatalog original = ConnectionHelpers.generateBasicApiCatalog();
+    original.getStreams().get(0).getStream()
+        .name("random-stream")
+        .defaultCursorField(List.of("field1"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(
+            Field.of("field1", JsonSchemaPrimitive.NUMBER),
+            Field.of("field2", JsonSchemaPrimitive.NUMBER),
+            Field.of("field5", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    original.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.INCREMENTAL)
+        .cursorField(List.of("field1"))
+        .aliasName("random_stream");
 
-    final SourceSchema actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
+    final AirbyteCatalog discovered = ConnectionHelpers.generateBasicApiCatalog();
+    discovered.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    discovered.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .aliasName("stream1");
+
+    final AirbyteCatalog expected = ConnectionHelpers.generateBasicApiCatalog();
+    expected.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    expected.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .aliasName("stream1");
+
+    final AirbyteCatalog actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
+
+    assertEquals(expected, actual);
+  }
+
+  @Test
+  public void testUpdateSchemaWithDiscoveryMergeNewStream() {
+    final AirbyteCatalog original = ConnectionHelpers.generateBasicApiCatalog();
+    original.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field1"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(
+            Field.of("field1", JsonSchemaPrimitive.NUMBER),
+            Field.of("field2", JsonSchemaPrimitive.NUMBER),
+            Field.of("field5", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    original.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.INCREMENTAL)
+        .cursorField(List.of("field1"))
+        .aliasName("renamed_stream");
+
+    final AirbyteCatalog discovered = ConnectionHelpers.generateBasicApiCatalog();
+    discovered.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    discovered.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .aliasName("stream1");
+    final AirbyteStreamAndConfiguration newStream = ConnectionHelpers.generateBasicApiCatalog().getStreams().get(0);
+    newStream.getStream()
+        .name("stream2")
+        .defaultCursorField(List.of("field5"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field5", JsonSchemaPrimitive.BOOLEAN)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    newStream.getConfig()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .aliasName("stream2");
+    discovered.getStreams().add(newStream);
+
+    final AirbyteCatalog expected = ConnectionHelpers.generateBasicApiCatalog();
+    expected.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    expected.getStreams().get(0).getConfig()
+        .syncMode(SyncMode.INCREMENTAL)
+        .cursorField(List.of("field1"))
+        .aliasName("renamed_stream");
+    final AirbyteStreamAndConfiguration expectedNewStream = ConnectionHelpers.generateBasicApiCatalog().getStreams().get(0);
+    expectedNewStream.getStream()
+        .name("stream2")
+        .defaultCursorField(List.of("field5"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field5", JsonSchemaPrimitive.BOOLEAN)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    expectedNewStream.getConfig()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .aliasName("stream2");
+    expected.getStreams().add(expectedNewStream);
+
+    final AirbyteCatalog actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
 
     assertEquals(expected, actual);
   }
